support run in fc

--- a/.fun/root/etc/nginx/nginx.conf
+++ b/.fun/root/etc/nginx/nginx.conf
@@ -1,7 +1,8 @@
+error_log /mnt/auto/wordpress/var/log/nginx/error.log error;
 user www-data;
 worker_processes auto;
-pid /run/nginx.pid;
-include /etc/nginx/modules-enabled/*.conf;
+pid /mnt/auto/wordpress/var/run/nginx.pid;
+include /code/.fun/root/etc/nginx/modules-enabled/*.conf;
 
 events {
 	worker_connections 768;
@@ -9,6 +10,20 @@ events {
 }
 
 http {
+	access_log /mnt/auto/wordpress/var/nginx/access.log;
+
+	client_body_temp_path /mnt/auto/wordpress/var/nginx/body;
+    fastcgi_temp_path /mnt/auto/wordpress/var/nginx/fastcgi;
+	proxy_temp_path /mnt/auto/wordpress/var/nginx/proxy;
+	uwsgi_temp_path /mnt/auto/wordpress/var/nginx/uwsgi;
+	scgi_temp_path /mnt/auto/wordpress/var/nginx/scgi;
+
+	##
+	# Logging Settings
+	##
+	# error_log /mnt/auto/wordpress/var/nginx/error.log error;
+	# access_log /mnt/auto/wordpress/var/nginx/access.log;
+	
 
 	##
 	# Basic Settings
@@ -24,8 +39,9 @@ http {
 	# server_names_hash_bucket_size 64;
 	# server_name_in_redirect off;
 
-	include /etc/nginx/mime.types;
+	include /code/.fun/root/etc/nginx/mime.types;
 	default_type application/octet-stream;
+
 
 	##
 	# SSL Settings
@@ -33,13 +49,9 @@ http {
 
 	ssl_protocols TLSv1 TLSv1.1 TLSv1.2; # Dropping SSLv3, ref: POODLE
 	ssl_prefer_server_ciphers on;
+    
+	client_max_body_size 100M;
 
-	##
-	# Logging Settings
-	##
-
-	access_log /var/log/nginx/access.log;
-	error_log /var/log/nginx/error.log;
 
 	##
 	# Gzip Settings
@@ -59,8 +71,8 @@ http {
 	# Virtual Host Configs
 	##
 
-	include /etc/nginx/conf.d/*.conf;
-	include /etc/nginx/sites-enabled/*;
+	include /code/.fun/root/etc/nginx/conf.d/*.conf;
+	include /code/.fun/root/etc/nginx/sites-enabled/*;
 }
 
 
